--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -22,27 +22,27 @@ $screen-xl-min: 1200px;
         @content;
     }
  }
-#tsparticles{
-    height: 100%;
-    width: 100%;
-}
+//#tsparticles{
+//    height: 100%;
+//    width: 100%;
+//}
 //#tsparticles-canvas-el{
 //    display:none
 //}
 .header{
     &__particles{
-        left: 0px;
+        left: 0;
         top: 60px;
-        width: 0px;
-        height: 0px;
+        width: 0;
+        height: 0;
         border-top: 150px solid rgba(255, 182, 51, 0.8);
         border-right: 250px solid transparent;
     }
     &__container::before{
-        left: 0px;
-        top: 0px;
-        width: 0px;
-        height: 0px;
+        left: 0;
+        top: 0;
+        width: 0;
+        height: 0;
         border-top: 150px solid rgb(255, 182, 51);
         border-right: 250px solid transparent;
         
@@ -51,7 +51,7 @@ $screen-xl-min: 1200px;
             height: 100vh;
             background-color: rgba(0, 0, 0, 0.7);
             position: relative;
-        
+
         &__titles{
                 position: absolute;
                 top:30%;
@@ -64,8 +64,8 @@ $screen-xl-min: 1200px;
                 color:white;
                 font-weight: 700;
                 margin-bottom: 1.5rem;
-                
-        
+
+
                 span{
                     position:relative;
                     font-size: 2rem;
@@ -74,17 +74,17 @@ $screen-xl-min: 1200px;
                     text-transform: uppercase;
                     @include lg {
                         font-size:4rem
-                        
+
                     }
                     @include xl {
                         font-size:5rem
-                        
+
                     }
                 }
                 span::before{
                     content: attr(data-text);
                     position:absolute;
-                    top:0;
+                    //top:0;
                     left:0;
                     width: 100%;
                     height:100%;
@@ -120,13 +120,13 @@ $screen-xl-min: 1200px;
                     }
                     @include xl {
                         font-size:5rem
-                        
+
                     }
                 }
                 span::before{
                     content: attr(data-text);
                     position:absolute;
-                    top:0;
+                    //top:0;
                     left:0;
                     width: 100%;
                     height:100%;
@@ -137,10 +137,10 @@ $screen-xl-min: 1200px;
                     animation: animate 6s linear infinite;
 
                 }
-                
+
             }
             &__thirdtitle{
-                
+
                 color:white;
                 font-weight: 700;
                 margin-bottom: 2rem;
@@ -153,7 +153,7 @@ $screen-xl-min: 1200px;
                     }
                     @include xl {
                         font-size:4rem
-                        
+
                     }
                 }
                 &__technologies{
@@ -169,9 +169,9 @@ $screen-xl-min: 1200px;
                     }
                     @include xl {
                         font-size:2.5rem
-                        
+
                     }
-                    
+
                 }
                 &__myprojects{
                     button{
@@ -188,9 +188,9 @@ $screen-xl-min: 1200px;
                         }
                         @include xl {
                             font-size:1.8rem
-                            
+
                         }
-                        
+
                     }
                     button:hover{
                         background-color:#ffb633;
@@ -198,11 +198,11 @@ $screen-xl-min: 1200px;
 
                     }
                 }
-                
+
             }
         }
     }
-    
-    
+
+
 
 }
