--- a/src/sass/technologies.css
+++ b/src/sass/technologies.css
@@ -1,54 +1,47 @@
 .technologies {
-  background-color: #2f2f2f;
+  background-color: rgb(47, 47, 47);
   padding-top: 60px;
 }
-
 .technologies__container__title {
   margin-top: 2rem;
   font-size: 1.3rem;
-  color: #f7f7f7;
+  color: rgb(247, 247, 247);
   text-align: center;
   display: table;
   position: relative;
   margin: 0px auto 72px;
-  margin-top: 0px;
   font-weight: bold;
 }
-
 .technologies__container__title h2::before {
   bottom: 20px;
   left: -11px;
   content: "";
   display: block;
   position: absolute;
-  background: #ffb633 none repeat scroll 0% 0%;
+  background: rgb(255, 182, 51) none repeat scroll 0% 0%;
   width: 80%;
   height: 3px;
   border-radius: 50px;
-  -webkit-transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   opacity: 1;
 }
-
 .technologies__container__title h2::after {
   content: "";
   bottom: 6px;
   right: -12px;
   display: block;
   position: absolute;
-  background: #ffb633 none repeat scroll 0% 0%;
+  background: rgb(255, 182, 51) none repeat scroll 0% 0%;
   width: 80%;
   height: 3px;
   border-radius: 50px;
-  -webkit-transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   opacity: 1;
 }
-
 .technologies__container__secondtitle {
   margin-top: 2rem;
   font-size: 1.3rem;
-  color: #f7f7f7;
+  color: rgb(247, 247, 247);
   text-align: center;
   display: table;
   position: relative;
@@ -56,138 +49,104 @@
   margin-top: 0px;
   font-weight: bold;
 }
-
 .technologies__container__secondtitle h2::before {
   bottom: 20px;
   left: -11px;
   content: "";
   display: block;
   position: absolute;
-  background: #ffb633 none repeat scroll 0% 0%;
+  background: rgb(255, 182, 51) none repeat scroll 0% 0%;
   width: 80%;
   height: 3px;
   border-radius: 50px;
-  -webkit-transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   opacity: 1;
 }
-
 .technologies__container__secondtitle h2::after {
   content: "";
   bottom: 6px;
   right: -12px;
   display: block;
   position: absolute;
-  background: #ffb633 none repeat scroll 0% 0%;
+  background: rgb(255, 182, 51) none repeat scroll 0% 0%;
   width: 80%;
   height: 3px;
   border-radius: 50px;
-  -webkit-transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   opacity: 1;
 }
-
 .technologies__container__element:hover {
   cursor: pointer;
 }
-
 .technologies__container__elements {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
 .technologies__container__element:hover {
-  -webkit-box-shadow: 0 0 6px 6px #ffb633;
-          box-shadow: 0 0 6px 6px #ffb633;
+  box-shadow: 0 0 6px 6px rgb(255, 182, 51);
 }
-
 .technologies__container__element {
-  border: 2px solid #ffb633;
-  padding: 1rem;
+  border: 2px solid rgb(255, 182, 51);
+  min-height: 680px;
+  padding: 2rem;
   border-radius: 60px;
   margin-left: 1rem;
   margin-right: 1rem;
   margin-bottom: 2rem;
-  background-color: #272727;
+  background-color: rgb(39, 39, 39);
   opacity: 1;
-  -webkit-transform: translateX(0px);
-          transform: translateX(0px);
-  -webkit-transition: opacity 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
-  transition: opacity 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
+  transform: translateX(0px);
   transition: opacity 0.5s ease 0s, transform 0.5s ease 0s;
-  transition: opacity 0.5s ease 0s, transform 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
-  -webkit-box-shadow: 0 0 2px 2px #ffb633;
-          box-shadow: 0 0 2px 2px #ffb633;
+  box-shadow: 0 0 2px 2px rgb(255, 182, 51);
 }
-
 @media (min-width: 576px) {
   .technologies__container__element {
     width: 400px;
   }
 }
-
 .technologies__container__element__title {
   padding-top: 2rem;
   font-size: 2rem;
   text-transform: uppercase;
 }
-
 .technologies__container__element__description {
   margin-top: 2rem;
   font-size: 1.5rem;
 }
-
 .technologies__container__element__image img {
   width: 200px;
   height: 200px;
 }
-
 .technologies__container__restelement {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 1rem;
 }
-
 @media (min-width: 992px) {
   .technologies__container__restelement {
     padding-left: 2rem;
   }
 }
-
 .technologies__container__restelement__title {
   padding: 1rem;
-  border: 2px solid #ffb633;
+  border: 2px solid rgb(255, 182, 51);
   margin-bottom: 1rem;
   margin-right: 1rem;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
-
 @media (min-width: 992px) {
   .technologies__container__restelement__title {
     font-size: 1.3rem;
   }
 }
-
 .technologies__container__restelement__title:hover {
   background-color: #ffb633;
   cursor: pointer;
-  -webkit-transform: perspective(500px) rotateY(30deg);
-          transform: perspective(500px) rotateY(30deg);
+  transform: perspective(500px) rotateY(30deg);
   text-shadow: -6px 3px 2px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
-          box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
+  box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
 }
+
 /*# sourceMappingURL=technologies.css.map */
