--- a/src/sass/projects.css
+++ b/src/sass/projects.css
@@ -4,10 +4,9 @@
   padding-left: 2rem;
   padding-right: 2rem;
 }
-
 .projects__container__title {
   font-size: 1.8rem;
-  color: #f7f7f7;
+  color: rgb(247, 247, 247);
   text-align: center;
   display: table;
   position: relative;
@@ -15,201 +14,175 @@
   margin-top: 0px;
   font-weight: bold;
 }
-
 .projects__container__title h2::before {
   bottom: 20px;
   left: -11px;
   content: "";
   display: block;
   position: absolute;
-  background: #ffb633 none repeat scroll 0% 0%;
+  background: rgb(255, 182, 51) none repeat scroll 0% 0%;
   width: 80%;
   height: 3px;
   border-radius: 50px;
-  -webkit-transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   opacity: 1;
 }
-
 .projects__container__title h2::after {
   content: "";
   bottom: 6px;
   right: -12px;
   display: block;
   position: absolute;
-  background: #ffb633 none repeat scroll 0% 0%;
+  background: rgb(255, 182, 51) none repeat scroll 0% 0%;
   width: 80%;
   height: 3px;
   border-radius: 50px;
-  -webkit-transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   transition: left 0.5s ease-in-out 0s, right 0.5s ease-in-out 0s, opacity 0.5s ease-in-out 0s;
   opacity: 1;
 }
-
 .projects__container__elements {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-
 .projects__container__element {
-  width: 100%;
-  height: 100%;
+  height: 800px;
   overflow: hidden;
-  border: 4px solid #ffb633;
+  border: 4px solid rgb(255, 182, 51);
   margin-bottom: 2rem;
   min-width: 300px;
-  max-width: 400px;
+  width: 500px;
+  max-width: 500px;
   min-height: 550px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
+.projects__container__element__smalltitle {
+  font-weight: 700;
+  font-size: 1.2rem;
+  padding-bottom: 1rem;
+}
+.projects__container__element__content {
+  text-align: start;
+}
+.projects__container__element__technologies {
+  text-align: start;
+  font-weight: 600;
+  font-size: 1.1rem;
+  padding-top: 1rem;
+}
 @media (min-width: 768px) {
   .projects__container__element {
     margin-right: 2rem;
   }
 }
-
 .projects__container__element__title {
   font-size: 1.8rem;
   font-weight: 700;
   padding: 1rem;
   border-bottom: 2px solid white;
   background-color: #272727;
-  font-family: 'Zen Dots', cursive;
+  font-family: "Zen Dots", cursive;
 }
-
 .projects__container__element__image {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 215px;
   overflow: hidden;
 }
-
 .projects__container__element__image--img {
   overflow: hidden;
-  -webkit-transition: -webkit-transform 0.5s linear;
-  transition: -webkit-transform 0.5s linear;
   transition: transform 0.5s linear;
-  transition: transform 0.5s linear, -webkit-transform 0.5s linear;
 }
-
 .projects__container__element__image--img:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
-
 .projects__container__element__image img {
-  -webkit-transition: -webkit-transform 0.5s linear;
-  transition: -webkit-transform 0.5s linear;
   transition: transform 0.5s linear;
-  transition: transform 0.5s linear, -webkit-transform 0.5s linear;
   width: 100%;
   height: 100%;
 }
-
+.projects__container__element__technologies {
+  text-align: start;
+}
 .projects__container__element__description {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
   padding: 1rem;
   text-align: center;
   background-color: white;
   color: #272727;
   font-weight: 600;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex: 1;
 }
-
 .projects__container__element__buttons__livebutton:hover {
   cursor: pointer;
 }
-
 .projects__container__element__buttons__livebutton {
   background: none;
   border-top: 2px solid white;
   font-size: 1.3rem;
   padding: 0.7rem;
   font-weight: 600;
-  -webkit-transition: 0.8s;
   transition: 0.8s;
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4rem;
 }
-
 .projects__container__element__buttons__livebutton::before {
   content: "";
   position: absolute;
   left: 0;
   width: 100%;
   height: 0%;
-  background: #ffb633;
+  background: rgb(255, 182, 51);
   z-index: -1;
-  -webkit-transition: 0.8s;
   transition: 0.8s;
   top: 0;
   border-radius: 0 0 50% 50%;
 }
-
 .projects__container__element__buttons__livebutton:hover::before {
   height: 180%;
 }
-
 .projects__container__element__buttons__githubbutton:hover {
   cursor: pointer;
 }
-
 .projects__container__element__buttons__githubbutton::before {
   content: "";
   position: absolute;
   left: 0;
   width: 100%;
   height: 0%;
-  background: #ffb633;
+  background: rgb(255, 182, 51);
   z-index: -1;
-  -webkit-transition: 0.8s;
   transition: 0.8s;
   top: 0;
   border-radius: 0 0 50% 50%;
 }
-
 .projects__container__element__buttons__githubbutton:hover::before {
   height: 180%;
 }
-
 .projects__container__element__buttons__githubbutton {
   background: none;
   border-top: 2px solid white;
   font-size: 1.3rem;
   padding: 0.7rem;
   font-weight: 600;
-  -webkit-transition: 0.8s;
   transition: 0.8s;
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  gap: 0.6rem;
 }
-
 .projects__container__element__buttons__githubbutton img {
+  height: 23px;
   width: 23px;
 }
+
 /*# sourceMappingURL=projects.css.map */
